// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniRefColumnConfiguration component should render column "common_taxon": common_taxon 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/2"
    title="Bacteria, taxon ID 2"
    translate="no"
  >
    Bacteria
  </a>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "common_taxonid": common_taxonid 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/2"
    title="Bacteria, taxon ID 2"
    translate="no"
  >
    2
  </a>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "count": count 1`] = `
<DocumentFragment>
  5 members
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "date_modified": date_modified 1`] = `
<DocumentFragment>
  <time
    datetime="2024-05-29T00:00:00.000Z"
  >
    2024-05-29
  </time>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "from": from 1`] = `<DocumentFragment />`;

exports[`UniRefColumnConfiguration component should render column "id": id 1`] = `
<DocumentFragment>
  <span
    class="no-wrap accession-view"
  >
    <a
      class="accession"
      href="/uniref/UniRef50_A0A3E1E969"
    >
      UniRef50_A0A3E1E969
    </a>
  </span>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "identity": identity 1`] = `
<DocumentFragment>
  UniRef50
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "length": length 1`] = `
<DocumentFragment>
  1,227
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "members": members 1`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  >
    <li>
      <a
        href="/uniprotkb/A0A3E1E969"
      >
        A0A3E1E969
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/A0A7Y5C7M4"
      >
        A0A7Y5C7M4
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/B4CTX8"
      >
        B4CTX8
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb/A0A3C1H8I3"
      >
        A0A3C1H8I3
      </a>
    </li>
    <li>
      <a
        href="/uniparc/UPI00104BEFB8"
      >
        UPI00104BEFB8
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "name": name 1`] = `
<DocumentFragment>
  Cluster: Glucose dehydrogenase/Glucose dehydrogenase/Glucose dehydrogenase
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "organism": organism 1`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  >
    <li>
      <a
        href="/taxonomy/2026799"
        title="Verrucomicrobiota bacterium, taxon ID 2026799"
        translate="no"
      >
        Verrucomicrobiota bacterium
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/2030809"
        title="Hydrogenedentota bacterium, taxon ID 2030809"
        translate="no"
      >
        Hydrogenedentota bacterium
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/497964"
        title="Chthoniobacter flavus Ellin428, taxon ID 497964"
        translate="no"
      >
        Chthoniobacter flavus Ellin428
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/2026801"
        title="Verrucomicrobiales bacterium, taxon ID 2026801"
        translate="no"
      >
        Verrucomicrobiales bacterium
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/191863"
        title="Chthoniobacter flavus, taxon ID 191863"
        translate="no"
      >
        Chthoniobacter flavus
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "organism_id": organism_id 1`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  >
    <li>
      <a
        href="/taxonomy/2026799"
        title="Verrucomicrobiota bacterium, taxon ID 2026799"
        translate="no"
      >
        2026799
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/2030809"
        title="Hydrogenedentota bacterium, taxon ID 2030809"
        translate="no"
      >
        2030809
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/497964"
        title="Chthoniobacter flavus Ellin428, taxon ID 497964"
        translate="no"
      >
        497964
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/2026801"
        title="Verrucomicrobiales bacterium, taxon ID 2026801"
        translate="no"
      >
        2026801
      </a>
    </li>
    <li>
      <a
        href="/taxonomy/191863"
        title="Chthoniobacter flavus, taxon ID 191863"
        translate="no"
      >
        191863
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "sequence": sequence 1`] = `
<DocumentFragment>
  <button
    class="button secondary"
    type="button"
  >
    Show sequence 
  </button>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "types": types 1`] = `
<DocumentFragment>
  <span
    class="entry-title__status icon--uniparc"
    title="This marks a UniParc entry"
  >
    <test-file-stub />
  </span>
  <span
    class="entry-title__status icon--unreviewed"
    title="This marks an unreviewed UniProtKB entry"
  >
    <test-file-stub />
  </span>
</DocumentFragment>
`;
